# data_science

./: .env.dev.example  .gitignore  README.md  main.py  mcp.json  pyproject.toml  test_code_executor.py
Agent/: base_agent.py  code_executor_agent.py  modeler.py
Tools/: code_interpreter.py  data_profile_analysis.py  generate_work_dir.py  rag.py
workdir/example/: analysis_result.json  data_profile_report.txt
workdir/example/executed_code/: 1-1.ipynb  2-1.ipynb  3-1.ipynb  4-1.ipynb  5-1.ipynb  6-1.ipynb
