[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.30.0",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.0",
    "langchain[deepseek]>=0.3.26",
    "langgraph>=0.5.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mcp-server-fetch>=2025.4.7",
    "mcp-use>=1.3.7",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pulp>=3.2.2",
    "pypdf>=5.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "setuptools>=80.9.0",
]
